Different users for read and push. Added config to reader.

--- a/systemmonitor.yml
+++ b/systemmonitor.yml
@@ -1,6 +1,10 @@
 localhost:
   db:
-    user: monitor_insert
-    pass: qwerty
+    push:
+      user: monitor_insert
+      pass: qwerty
+    read:
+      user: monitor_select
+      pass: qwerty
     host: localhost
     schema: monitor
